--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -12,6 +12,7 @@ nav {
 
 .navbar-img {
   width: 160px;
+  margin-left: 400px;
 }
 
 .searchbar-container {
@@ -28,7 +29,7 @@ nav {
 
 .searchbar input {
   padding: 10px;
-  box-shadow: 0px 2px 2px (0, 0, 0, 0.25);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
   border: none;
 }
@@ -57,6 +58,11 @@ nav {
 }
 
 .pokemon-card {
+  background-color: gray;
+  background-image: url("../International_Pokémon_logo.svg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
   display: flex;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
@@ -122,6 +128,15 @@ nav {
   align-items: center;
 }
 
+.not-found-text {
+  text-align: center;
+  font-size: 1.25rem;
+  padding: 20px;
+}
+
+body {
+  background-color: pink;
+}
 
 .App {
   text-align: center;
