--- a/pokedex/src/App.css
+++ b/pokedex/src/App.css
@@ -58,11 +58,11 @@ nav {
 }
 
 .pokemon-card {
-  background-color: gray;
+  background-color: rgb(255, 153, 0);
   background-image: url("../International_Pokémon_logo.svg.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
+  background-size: 100px;
   display: flex;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 3px;
@@ -106,6 +106,7 @@ nav {
 
 .pokemon-type {
   display: flex;
+
 }
 
 .pokemon-type-text {
@@ -135,7 +136,10 @@ nav {
 }
 
 body {
-  background-color: pink;
+  background: linear-gradient(-45deg, rgb(0, 250, 112), rgb(253, 253, 253), rgb(17, 17, 17), rgb(0, 255, 255));
+    background-size: 400% 400%;
+    width: 100%;
+    height: 60vh;
 }
 
 .App {
